tests/inter/fail/illegal-028.dcf
bool x[] = {1, true};

void main() {}